<resources>
    <string name="app_name">Task Manager</string>
    <string name="hintDescription">A short description for the task</string>
    <string name="spnPriority">Priority</string>
    <string name="btn_submit">Submit</string>
    <string name="lblDescription">Description</string>
    <string name="lblDeadline">Deadline</string>
    <string name="lblPriority">Priority</string>
    <string name="confirm_delete_task">Are you sure you want to delete this task?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
</resources>
