<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center_horizontal">

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2">

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDescription"
            android:gravity="right"
            android:layout_columnWeight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintDescription"
            android:id="@+id/edtDescription"
            android:layout_columnWeight="2"/>

        <!-- Deadline -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDeadline"
            android:gravity="right"
            android:layout_columnWeight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtDeadline"
            android:inputType="datetime"
            android:layout_columnWeight="2"/>

        <!-- Priority -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPriority"
            android:gravity="right"
            android:layout_columnWeight="1"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/spnPriority"
            android:id="@+id/spnPriority"
            android:entries="@array/spnPriority"
            android:layout_columnWeight="2"></Spinner>
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:onClick="submit"/>

</LinearLayout>
